# sqruff

./: Cargo.toml
crates/genfixtures/: Cargo.toml
crates/genfixtures/src/: main.rs
