[package]
name = "genfixtures"
description = "Generate fixtures for the sqruff project"
version.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sqruff-lib = { version = "0.14.0", path = "../lib", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
glob = { version = "0.3" }
itertools = "0.13.0"
serde = { version = "1.0.204", features = ["derive"], optional = true }
serde_yaml = "0.9.34+deprecated"

